--- a/Win32Project1/Win32Project1.vcxproj.filters
+++ b/Win32Project1/Win32Project1.vcxproj.filters
@@ -58,5 +58,8 @@
     <Text Include="data.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="rosenbrock.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
